# ToyLLM

./: .gitignore  attention.py  attention_without_trainable_weights.py  bpe.py  byte_pair_encoding_handcoding.py  config.py  dataloader.py  embedding.py  feed_forward.py  gelu.py  gpt.py  layer_normalisation.py  main.py  pyproject.toml  self_attention.py  self_attention_with_trainable_weights.py  tokenizer.py  transformer.py
data/: indian-names.txt
hf/: __init__.py  build_tokenizer.py  test_tokenizer.py  tokenizer.py
namelm/: config.py  dataloader.py  model.py  name_generator.py  trainer.py
